[gd_scene load_steps=2 format=3 uid="uid://keybind_screen"]

[ext_resource type="Script" path="res://scripts/ui/keybind_screen.gd" id="1"]

[node name="KeybindScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Keybindings"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProfileLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Profile:"
theme_override_font_sizes/font_size = 16

[node name="ProfileSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ProfileDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer/Header/ProfileSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewProfileButton" type="Button" parent="MarginContainer/VBoxContainer/Header/ProfileSection"]
layout_mode = 2
text = "New Profile"

[node name="DeleteProfileButton" type="Button" parent="MarginContainer/VBoxContainer/Header/ProfileSection"]
layout_mode = 2
text = "Delete Profile"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="KeybindContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
text = "Back"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
text = "Reset to Defaults"
